--- a/personsApp/package.json
+++ b/personsApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@faker-js/faker": "^9.6.0",
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.1",
     "react": "^19.0.0",
